plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.12'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.aikids'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
}

ext {
	set('springAiVersion', "1.1.3")
}

dependencies {
	// google-cloud-speech(4.38.0)와 gRPC 버전을 강제로 정렬
	implementation enforcedPlatform('io.grpc:grpc-bom:1.62.2')

	// Spring AI BOM
	implementation platform("org.springframework.ai:spring-ai-bom:${springAiVersion}")

	// Spring AI
	implementation "org.springframework.ai:spring-ai-starter-model-google-genai"
	implementation "org.springframework.ai:spring-ai-starter-vector-store-chroma"

	// Spring Boot Core
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// Spring Security & OAuth2
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	implementation 'com.google.cloud:google-cloud-speech:4.38.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	// Database & Utils
	runtimeOnly 'com.mysql:mysql-connector-j'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
}

tasks.named('bootRun') {
	jvmArgs += ['-Dfile.encoding=UTF-8', '-Dsun.jnu.encoding=UTF-8']
}
